derive/tests/snapshots/soft_delete_flag/Ticket/create_ticket.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Create a row in the `ticket` table.
    pub fn create_ticket<'a>(
        &'a self,
        ticket: CreateTicket,
    ) -> Result<Ticket, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let id = u64::default();
        let title = ticket.title;
        let priority = ticket.priority;
        let deleted = false;
        let ticket = Ticket {
            id,
            title,
            priority,
            deleted,
        };
        match self.db().ticket().try_insert(ticket.clone()) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "ticket".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ ticket : {:?} }}", ticket
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "ticket".into(),
                        })
                    }
                }
            }
        }
    }
}
