derive/tests/snapshots/soft_delete_flag/Ticket/get_all_tickets.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `ticket` table.
    pub fn get_all_tickets<'a>(&'a self) -> impl Iterator<Item = Ticket> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().ticket().iter()
    }
}
