derive/tests/snapshots/soft_delete_flag/Ticket/update_ticket_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Ticket` row of the `ticket` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn update_ticket_by_id<'a>(
        &'a self,
        ticket: Ticket,
    ) -> Result<Ticket, crate::spacetimedsl::error::SpacetimeDSLError> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut ticket = ticket;
        let ticket = self.db().ticket().id().update(ticket);
        Ok(ticket)
    }
}
